# backend/src/api.ts
@@ -4,6 +4,7 @@ import createAuthApiRouter from './routes/api/v1/auth';
 import createUserApiRouter from './routes/api/v1/user';
 import createUserSessionsApiRouter from './routes/api/v1/usersession';
 import createLabelApiRouter from './routes/api/v1/label';
+import createValueApiRouter from './routes/api/v1/value';
 
 export function createApiRouter(config: ConfigType): Router {
   const router = Router();
@@ -11,5 +12,6 @@ export function createApiRouter(config: ConfigType): Router {
   router.use('/label', createLabelApiRouter());
   router.use('/user', createUserApiRouter());
   router.use('/usersession', createUserSessionsApiRouter());
+  router.use('/value', createValueApiRouter());
   return router;
 }
